# srclight

./: .gitignore  .mcpregistry_registry_token  CLAUDE.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/: cursor-mcp-example.json  design-system-auditing.md  gpu-multi-backend-plan.md  releasing.md  usage-guide.md
scripts/: test_hybrid_search.py
src/srclight/: __init__.py  build.py  cli.py  db.py  embeddings.py  git.py  indexer.py  languages.py  server.py  vector_cache.py  vector_math.py  web.py  workspace.py
src/srclight/extractors/: __init__.py  base.py  csv_extractor.py  docx_extractor.py  email_extractor.py  html_extractor.py  image_extractor.py  pdf_extractor.py  text_extractor.py  xlsx_extractor.py
tests/: test_build.py  test_db.py  test_embeddings.py  test_extractors.py  test_features.py  test_git.py  test_hooks.py  test_indexer.py  test_vector_cache.py  test_vector_math.py  test_workspace.py
tests/fixtures/dart/: sample.dart
